--- a/hugo.toml
+++ b/hugo.toml
@@ -1,18 +1,18 @@
 baseURL = "http://example.org/"
 languageCode = "zh-CN"
-title = "爱分享导航站"
-theme = "hugo-webstack"
+title = "POPPIN 导航"
+theme = "POPPIN-DH"
 
 #true:允许大写字母url路径，false:将url路径转换成小写
 disablePathToLower = true
 
 #页脚：作者名字
-copyright = "afx"
+copyright = "POPPIN DH"
 
 #网站信息，不显示，仅供搜索引擎参考
 [params]
-  keywords = "网址导航,webstack,hugo,vpn,科学上网，免费节点，爱分享，科技共享"
-  description = "Webstack Hugo版主题,网址导航"
+  keywords = "网址导航,dh.boke.us.kg,POPPIN 导航站"
+  description = "dh.boke.us.kg,网址导航"
 
 #是否开启搜索栏，true开启，false关闭
 [params.search]
@@ -25,7 +25,7 @@ copyright = "afx"
 #主页菜单栏显示在线编辑按钮（编辑github文件，适用于自动化部署的情况）
 [params.edit]
   # true显示按钮，false不显示
-  enable = true
+  enable = false
   # github文件的远程链接，改成自己的
   url = "https://github.com/afengxiang/afx/blob/main/data/webstack.yml"
   
