--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = "http://example.org/"
 languageCode = "zh-CN"
 title = "POPPIN 导航"
-theme = "Hugo-POPPIN DH"
+theme = "hugo-webstack"
 
 #true:允许大写字母url路径，false:将url路径转换成小写
 disablePathToLower = true
