--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = "http://example.org/"
 languageCode = "zh-CN"
 title = "POPPIN 导航"
-theme = "hugo-webstack"
+theme = "POPPIN-DH"
 
 #true:允许大写字母url路径，false:将url路径转换成小写
 disablePathToLower = true
@@ -11,8 +11,8 @@ copyright = "POPPIN DH"
 
 #网站信息，不显示，仅供搜索引擎参考
 [params]
-  keywords = "网址导航,dh.poppin.us.kg,POPPIN 导航站"
-  description = "dh.poppin.us.kg,网址导航"
+  keywords = "网址导航,dh.poppin.us.kg"
+  description = "POPPIN DH版主题,网址导航"
 
 #是否开启搜索栏，true开启，false关闭
 [params.search]
