--- a/themes/hugo-webstack/exampleSite/hugo.toml
+++ b/themes/hugo-webstack/exampleSite/hugo.toml
@@ -32,7 +32,7 @@ copyright = "POPPIN"
 #桌面端右上角code按钮
 [params.github]
   enable = true #true显示 false隐藏
-  url = "https://dh.poppin.us.kg"
+  url = "https://github.com/oulh/nav"
   
 [permalinks]  
   404 = "/404.html"
