--- a/themes/hugo-webstack/exampleSite/hugo.toml
+++ b/themes/hugo-webstack/exampleSite/hugo.toml
@@ -12,7 +12,7 @@ copyright = "POPPIN"
 #网站信息，不显示，仅供搜索引擎参考
 [params]
   keywords = "网址导航,dh.poppin.us.kg"
-  description = "POPPIN DH版主题,网址导航"
+  description = "Webstack Hugo版主题,网址导航"
 
 #是否开启搜索栏，true开启，false关闭
 [params.search]
