--- a/themes/hugo-webstack/exampleSite/hugo.toml
+++ b/themes/hugo-webstack/exampleSite/hugo.toml
@@ -1,7 +1,7 @@
 baseURL = "http://example.org/"
 languageCode = "zh-CN"
 title = "POPPIN 导航"
-theme = "hugo-webstack"
+theme = "POPPIN-DH"
 
 #true:允许大写字母url路径，false:将url路径转换成小写
 disablePathToLower = true
@@ -32,7 +32,7 @@ copyright = "POPPIN"
 #桌面端右上角code按钮
 [params.github]
   enable = true #true显示 false隐藏
-  url = "https://github.com/oulh/nav"
+  url = "https://dh.poppin.us.kg"
   
 [permalinks]  
   404 = "/404.html"
