--- a/themes/hugo-webstack/theme.toml
+++ b/themes/hugo-webstack/theme.toml
@@ -1,11 +1,11 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "hugo-webstack"
+name = "POPPIN-DH"
 license = "MIT"
 licenselink = "https://github.com/oulh/hugo-webstack/blob/master/LICENSE"
 description = "a theme for website navigation, it's based on webstack. "
-homepage = "https://oulh.github.io/nav/"
+homepage = "https://dh.poppin.us.kg"
 tags = ["url", "navigation", "webstack"]
 features = ["minimalism", "simple"]
 min_version = "0.116.1"
