--- a/themes/hugo-webstack/theme.toml
+++ b/themes/hugo-webstack/theme.toml
@@ -11,11 +11,11 @@ features = ["minimalism", "simple"]
 min_version = "0.116.1"
 
 [author]
-  name = "oulh"
+  name = "POPPIN"
   homepage = "https://dh.poppin.us.kg"
 
 # If porting an existing theme
 [original]
-  name = "webstack-hugo"
+  name = "POPPIN-DH"
   homepage = "https://dh.poppin.us.kg"
   repo = "https://github.com/iplaycode/webstack-hugo/tree/5e85297db430079c468dd33e78a945556973c73a/"
