--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -3,10 +3,10 @@
 - taxonomy: 常用推荐
   icon: fa-star
   links: 
-    - title: YouTube
+    - title: POPPIN BOKE
       logo: 
-      url: https://www.youtube.com/channel/UCgV1t5fHFvAVPyprEWvuIzg/
-      description: 一个专注于软件安装，科学上网教学的频道！
+      url: https://boke.poppin.eu.org/
+      description: 个人博客！
     - title: 资源博客
       qrcode: images/qrcodes/bk.png
       logo:  images/logos/kjgxa999f-kjgx1fr3l-001.ico
