--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -1,7 +1,7 @@
 ---
 
 - taxonomy: 博客
-  icon: wordpress
+  icon: fab fa-wordpress
   links: 
     - title: POPPIN BOKE
       logo: images/logos/poppinboke.png
